_assets/css/index.scss
/* ... */
h3{
  font-size: 1.4em;
}

h4{
  font-size: 1.4em;
  color: var(--fedsim-blue2);
  margin-block-start: 0.8em;
  margin-block-end: 0.8em;
}

h5{
  font-size: 1.2em;
}

p{
  line-height: 1.5em;
}

.h4_title{
  text-transform: uppercase;
}

@media screen and (max-width: 414px){
  h1, h2, .h4_title{
    font-size: 1.2em;
  }
  h3, h4, h5{
    font-size: 1em;
  }

  h1, h2, h3, h4, h5{
    margin-block-start: auto;
    margin-block-end: auto;
  }
}

img{
	-webkit-transform: translateZ(0); 
	transform: translateZ(0);
}


//General stylings

.back-grey{
  background-color: var(--fedsim-litegrey) !important;
  font-weight: 600;
}

.back-white{
  background-color: white !important;
}

.big-titles{
  font-size: 4em;
  margin-block-start: auto;
  margin-block-end: auto;
}

.greyborder{
  background-color: var(--fedsim-litegrey);
  border: solid 2px var(--fedsim-darkgrey);
}

.grid-row-framed{
  width: 100vw;
  display: flex;
}

.h-spacer{
  background-color: white;
  height: 20px;
}

.big-v-buffer{
  padding-top: 10px!important;
  padding-bottom: 10px!important;
  margin-top: 10px!important;
  margin-bottom: 10px!important;
}

.v-buffer{
  padding-top: 10px;
  padding-bottom: 10px;
}

.hidden{
  position: absolute;
  left: -10000px;
  top: auto;
  width: 1px;
  height: 1px;
  overflow: hidden;
  display: none!important;
  visibility: hidden!important;
}

.hide{
  display: none!important;
}

.show{
  display: block!important;
}

.small-italic{
  font-style: italic; 
  font-size: 14px;
}

hr.highlight-line, hr.highlight-line-sm, hr.media-line{
  border-top: 5px solid var(--fedsim-blue1);
  border-radius: 2px;
}

hr.media-line{
  width: 700px;
}

@media screen and (max-width: 414px){
  hr.media-line{
    width: 300px;
  }
}

.indented p{
  margin-left: 16px;
}

.post-text{
  font-size: 1.2em;
  font-weight: 500;
}

.sidepadded{
  padding: 0 20px!important;
}

.noPadding{
  padding: 0!important;
}

.section-btn{
  text-align: center;
  padding-top: 20px;
  padding-bottom: 20px;
  margin: auto;
  background-color: var(--fedsim-blue1);
  color: white;
  border-radius: 12px;
  border: solid white 5px;
  cursor: pointer;
}

.moreRound{
  border-radius: 36px!important;
}

.section-icon p{
  font-size: 1.6em;
  font-weight: bold;
  margin: auto;
  text-align: center;
  text-transform: uppercase;
}

.section-btn p, .section-btn-clear p{
  margin: auto;
}

.section-btn:hover{
 background-color: var(--fedsim-blue3);
}

.section-btn a, .section-btn a:hover{
  color: white;
  text-decoration: none;
}

.section-btn-clear{
  width: 250px;
  height: 50px;
  text-align: center;
  padding-top: 20px;
  padding-bottom: 20px;
  margin: auto;
  background-color: white;
  color:  var(--fedsim-blue1);
  border-radius: 36px;
  border: solid var(--fedsim-blue1) 5px;
  cursor: pointer;
}

.section-btn-clear:hover{
 background-color: white;
}

.section-btn-clear a, .section-btn-clear a:hover{
  color:  var(--fedsim-blue1);
  text-decoration: none;
}

.one-third{
  width: 33%;
}

.one-fourth{
  width: 24%;
}

.one-half{
  width: 50%;
}

.on-left{
  border-right: solid white 3px;
}

.on-right{
  border-left: solid white 3px;
}

.left-aligned{
  text-align: left;
  margin-right: 10px;
}

.right-aligned{
  text-align: right;
  margin-right: 10px;
}

.whitetext, .whitetext a{
  color: white;
  margin: 20px auto;
  font-weight: bold;
}

.with-side-buffer{
  margin: 0 40px 20px 40px;
}

.withborder{
  border: solid 2px var(--fedsim-blue1);
}

.withborder-grey{
  border: solid 2px var(--fedsim-darkgrey);
  color: var(--fedsim-darkgrey)
}

.withborder-left{
  border-left: solid 2px var(--fedsim-blue1);
}

.withborder-right{
  border-right: solid 2px var(--fedsim-blue1);
}

::selection{
  color: var(--fedsim-offwhite);
  background-color: var(--fedsim-darkgrey);
}

@media screen and (max-width: 414px){
  .no-mobile{
    display: none!important;
  }
}

//Video styles  
iframe.vidThumb, object.videoObj{
  width: 500px;
  height: 281px;
}

@media screen and (max-width: 414px){
  iframe.vidThumb, object.videoObj{
    width: 350px;
    height: 197px;
  }
}
	
//Header styles
.usa-banner__inner {
  display: block;
  align-items: center;
  text-align: center;
}

.usa-navbar{
  height: 5rem;
}

.usa-banner__lock-image{
  background-color: #f0f0f0;
}

.usa-menu-btn{
  padding: 8px;
  margin: 10px;
}

input[type="search"]{
  border-radius: 6px 0 0 6px;
}

//Footer styles
hr.footer-border{
  width: 100vw;
  border-top: 5px solid var(--fedsim-lightgrey);
  margin-top: 0;
}

.usa-footer{
  line-height: 1.4rem;
  font-family: "Montserrat", sans-serif;
  font-size: 0.80rem;
}

.usa-footer h3{
  font-size: 1.15em;
}

.footer_side_left, .footer_side_right{
  color: var(--fedsim-blue1);
  margin-right: 20px;
}

.footer_side_left{
  text-align: right; 
}

.footer_side_right{
  text-align: left; 
}

.logo-links{
  padding: 10px;
}

.footer-back{
  width: 100vw;
  background-color: var(--fedsim-litegrey);
  margin-top: 10px;
}

@media screen and (max-width: 414px){
  .footer_side_left,
  .footer_side_right{
    text-align: center; 
  }
}

//Callout styles
.usa-hero{
  background-image: asset_url("home.jpg");
  height: 500px;
  font-family: "Montserrat", sans-serif;
}

.usa-hero__callout{
  min-width: 550px;
  background-color: white;
  border-radius: 15px;
  padding: 1rem 1rem 0.4rem 1rem;
  margin-left: 60px;
}

.usa-hero__callout, .usa-hero__heading{
  color: var(--fedsim-blue1);
}

.usa-hero__callout h1{
  margin-block-start: 10px;
  font-size: 1.45rem;
}


@media screen and (max-width: 414px){
  .usa-hero{
    background-image: none;
    height: auto;
  }

  .usa-hero__callout{
    min-width: 300px;
    background-color: var(--fedsim-blue1);
    border-radius: 15px;
    padding: 10px;
    margin: auto;
  }

  .usa-hero__callout, .usa-hero__callout h1{
    color: white;
  }

}


//Blocks
.grid-wrapper{
  display: flex;
  flex-flow: row nowrap;
}

.flex-wrapper {
  display: flex;
  flex-flow: row nowrap;
}
/* ... */

